Modify banner html snippet to prevent clicking on links inside the banners, and allow click event to propagate up to the wrapping <a> tag

--- a/hl-affiliates-account/acontent/less/affiliate/components/get-code-modal.less
+++ b/hl-affiliates-account/acontent/less/affiliate/components/get-code-modal.less
@@ -80,6 +80,9 @@
 		background-image: url(../images/loading-lighter.gif);
 		background-repeat: no-repeat;
 		background-position: center center;
+		a {
+			display: block;
+		}
 	}
 
 	.get-code-modal--banner-details {
